each student enrolled to 1-3 course