@@ -6,7 +6,6 @@ import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.nio.charset.StandardCharsets;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class FileReader {
 
@@ -15,7 +14,7 @@ public class FileReader {
         StringBuilder result = new StringBuilder();
         try (InputStream inputStream = getClass().getResourceAsStream(fileName);
              BufferedReader reader = new BufferedReader(new InputStreamReader(inputStream, StandardCharsets.UTF_8))) {
-            list = reader.lines().collect(Collectors.toList());
+            list = reader.lines().toList();
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
